--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Chương trình Backcom Exness - hoàn phí không giới hạn</title>
+	<title>Chương trình Backcom Exness - Hoàn phí giao dịch</title>
 	<meta name="description" content="Tìm hiểu về chương trình Backcom Exness: nhận hoàn tiền, hoa hồng giao dịch, hướng dẫn đăng ký và tối ưu lợi ích khi giao dịch Exness.">
 	<meta name="keywords" content="Backcom Exness, hoàn tiền Exness, hoa hồng Exness, chương trình Backcom, Exness rebate, nhận hoa hồng Exness, hướng dẫn Exness">
 		 <meta name="robots" content="index, follow">
@@ -22,9 +22,9 @@
 		 {
 			 "@context": "https://schema.org",
 			 "@type": "Article",
-			 "headline": "Chương trình Backcom Exness - hoàn phí không giới hạn",
+			 "headline": "Chương trình Backcom Exness - Hoàn phí giao dịch",
 			 "description": "Tìm hiểu về chương trình Backcom Exness: nhận hoàn tiền, hoa hồng giao dịch, hướng dẫn đăng ký và tối ưu lợi ích khi giao dịch Exness.",
-			 "image": "https://your-github-username.github.io/backcom-exness/og-image.png",
+			 "image": "https://tieptocon.github.io/backcom-exness/Exness_Logo_White_Clear.png",
 			 "author": {
 				 "@type": "Person",
 				 "name": "Backcom Exness"
@@ -34,7 +34,7 @@
 				 "name": "Backcom Exness",
 				 "logo": {
 					 "@type": "ImageObject",
-					 "url": "https://your-github-username.github.io/backcom-exness/logo.png"
+					 "url": "https://tieptocon.github.io/backcom-exness/Exness_Logo_White_Clear.png"
 				 }
 			 },
 			 "datePublished": "2025-09-17",
