--- a/index.html
+++ b/index.html
@@ -45,15 +45,14 @@
 	<meta property="og:title" content="Chương trình Backcom Exness - Hỗ trợ giao dịch và nhận hoa hồng">
 	<meta property="og:description" content="Tìm hiểu về chương trình Backcom Exness: nhận hoàn tiền, hoa hồng giao dịch, hướng dẫn đăng ký và tối ưu lợi ích khi giao dịch Exness.">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://your-github-username.github.io/backcom-exness/">
-	<meta property="og:image" content="https://your-github-username.github.io/backcom-exness/og-image.png">
+	<meta property="og:url" content="https://tieptocon.github.io/backcom-exness/">
+	<meta property="og:image" content="https://tieptocon.github.io/backcom-exness/Exness_Logo_White_Clear.png">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Chương trình Backcom Exness - Hỗ trợ giao dịch và nhận hoa hồng">
 	<meta name="twitter:description" content="Tìm hiểu về chương trình Backcom Exness: nhận hoàn tiền, hoa hồng giao dịch, hướng dẫn đăng ký và tối ưu lợi ích khi giao dịch Exness.">
-	<meta name="twitter:image" content="https://your-github-username.github.io/backcom-exness/og-image.png">
+	<meta name="twitter:image" content="https://tieptocon.github.io/backcom-exness/Exness_Logo_White_Clear.png">
 	<link rel="icon" href="favicon.ico">
 	<style>
-	   /* Thanh menu cố định trên cùng */
 	   .navbar {
 		   position: fixed;
 		   top: 0;
