--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			 "dateModified": "2025-09-17"
 		 }
 		 </script>
-	<link rel="canonical" href="https://your-github-username.github.io/backcom-exness/">
+	<link rel="canonical" href="https://tieptocon.github.io/backcom-exness/">
 	<meta property="og:title" content="Chương trình Backcom Exness - Hỗ trợ giao dịch và nhận hoa hồng">
 	<meta property="og:description" content="Tìm hiểu về chương trình Backcom Exness: nhận hoàn tiền, hoa hồng giao dịch, hướng dẫn đăng ký và tối ưu lợi ích khi giao dịch Exness.">
 	<meta property="og:type" content="website">
@@ -238,7 +238,7 @@
     </ol>
 </nav>
 <div class="container" itemscope itemtype="https://schema.org/Article">
-	<img src="https://photo2.tinhte.vn/data/attachment-files/2025/04/8708689_Backcom_Exness_EX.jpg" alt="Backcom Exness - hoàn phí không giới hạn" style="width:100%;max-width:600px;display:block;margin:0 auto 24px auto;border-radius:8px;box-shadow:0 2px 8px rgba(20,20,20,0.18);background:#222;" loading="lazy">
+	<img src="https://i.postimg.cc/fTBd7V9W/Backcom-Exness-EX.jpg" alt="Backcom Exness - hoàn phí không giới hạn" style="width:100%;max-width:600px;display:block;margin:0 auto 24px auto;border-radius:8px;box-shadow:0 2px 8px rgba(20,20,20,0.18);background:#222;" loading="lazy">
 	<h1 itemprop="headline">Chương trình Backcom Exness - Nhận hoàn tiền và hoa hồng giao dịch</h1>
 	<p itemprop="description"><strong>Backcom Exness</strong> là chương trình hoàn tiền (rebate) và nhận hoa hồng hấp dẫn dành cho các nhà giao dịch trên sàn Exness. Tham gia chương trình, bạn sẽ được hoàn lại một phần phí giao dịch và nhận thêm nhiều ưu đãi đặc biệt.</p>
 
@@ -268,7 +268,7 @@
     <h2 id="huong-dan">Hướng dẫn tham gia chương trình Backcom Exness</h2>
     <ol>
         <li>Đăng ký tài khoản Exness qua <a href="https://one.exnessonelink.com/boarding/sign-up/303589/a/k189qa4vek?lng=vi" rel="nofollow">link đăng ký</a> của đối tác Backcom.</li>
-        <li>Xem hướng dẫn <a href="https://one.exnessonelink.com/boarding/sign-up/303589/a/k189qa4vek?lng=vi" rel="nofollow">chuyển đối tác Exness</a> để nhận Backcom hoàn phí giao dịch.</li>
+        <li>Xem hướng dẫn <a href="https://backcoms.com/" rel="nofollow">chuyển đối tác Exness</a> để nhận Backcom hoàn phí giao dịch.</li>
     </ol>
 <p> Tất cả khác hàng đều có thể tham gia nhận Backcom Exness, làm theo 2 cách trên chắc chắn bạn được cài Backcom thành công.</p>
     <h2 id="faq">Câu hỏi thường gặp về Backcom Exness</h2>
@@ -300,13 +300,13 @@
     </div>
 
     <h2>Đăng ký tham gia Backcom Exness ngay hôm nay!</h2>
-    <p>Đừng bỏ lỡ cơ hội nhận hoàn tiền và hoa hồng hấp dẫn từ Exness. <a href="https://www.exness.com/" rel="nofollow">Đăng ký ngay</a> hoặc liên hệ admin để được hỗ trợ chi tiết.</p>
+    <p>Đừng bỏ lỡ cơ hội nhận hoàn tiền và hoa hồng hấp dẫn từ Exness. <a href="https://one.exnessonelink.com/boarding/sign-up/303589/a/k189qa4vek?lng=vi" rel="nofollow">Đăng ký ngay</a> hoặc liên hệ admin để được hỗ trợ chi tiết.</p>
 
     <h2 id="lien-he">Liên hệ hỗ trợ</h2>
     <ul>
         <li>Email: <a href="mailto:support@backcomexness.com">support@backcomexness.com</a></li>
-        <li>Telegram: <a href="https://t.me/backcomexness" rel="nofollow">@backcomexness</a></li>
+        <li>Telegram: <a href="https://t.me/backcoms" rel="nofollow">@backcoms</a></li>
     </ul>
-    <p>Truy cập <a href="https://your-github-username.github.io/backcom-exness/">trang Backcom Exness trên GitHub Pages</a> để biết thêm chi tiết, cập nhật tin tức và các chương trình ưu đãi mới nhất.</p>
+    <p>Truy cập <a href="https://backcoms.com/">trang Backcom Exness trên GitHub Pages</a> để biết thêm chi tiết, cập nhật tin tức và các chương trình ưu đãi mới nhất.</p>
 </div></body>
 </html>
